2003-08-04  Alan Modra  <amodra@bigpond.net.au>

	* elfcode.h: Convert to C90, remove unneeded casts and prototypes.
	* elfcore.h: Likewise.
	* elflink.c: Likewise.
	* elflink.h: Likewise.
	* elf.c (sym_is_global): Remove INLINE.
	(align_file_position): Replace INLINE with inline.
	* elfcode.h (elf_swap_dyn_in, elf_swap_dyn_out): Remove INLINE.
	(elf_file_p): Replace INLINE with inline.

2003-08-02  Kaz Kojima  <kkojima@rr.iij4u.or.jp>

	* elf32-sh.c (sh_elf_check_relocs): Don't set DF_TEXTREL here.

2003-08-01  H.J. Lu  <hongjiu.lu@intel.com>

	* elfxx-ia64.c (get_got): Align the .got section at 8 bytes.

2003-08-01  H.J. Lu  <hongjiu.lu@intel.com>

	* elfxx-ia64.c (elfNN_ia64_finish_dynamic_symbol): Use
	ElfNN_External_Rela instead of Elf64_External_Rela.

2003-08-01  Nick Clifton  <nickc@redhat.com>

	* config.bfd: Add code to catch obsolete configurations and warn
	about them unless --enable-obsolete is used.  Use this to mark
	vax-vms port as obsolete.

2003-07-30  Alan Modra  <amodra@bigpond.net.au>

	* elf32-ppc.c (ppc_elf_install_value): Tidy.
	(ppc_elf_relax_section): Remove dead code.  Remove unnecessary casts.
	Formatting.
	* elfxx-target.h: Remove PARAMS macro.  Formatting.

2003-07-30  Alan Modra  <amodra@bigpond.net.au>

	* elf.c (bfd_section_from_r_symndx): Test for SHN_UNDEF.
	* elf64-ppc.c (get_fdh): New function, split out from
	ppc64_elf_edit_opd.
	(ppc64_elf_check_relocs): Use get_fdh.
	(func_desc_adjust): Likewise.  Tidy.
	(ppc64_elf_edit_opd): Tighten reloc checks.  Free local_syms on error
	exit.  Use get_fdh.  Account for superfluous dynamic relocs.
	(ppc64_elf_relocate_section): Warning fix.

2003-07-30  Jason Eckhardt  <jle@rice.edu>

	* coff-i860.c: Convert to ISO C90.  Remove superflous prototypes.

2003-07-30  Jason Eckhardt  <jle@rice.edu>

	* elf32-i860.c: Convert to ISO C90.  Remove superflous prototypes.

2003-07-30  Randolph Chung  <tausq@debian.org>

	* elf-hppa.h (elf_hppa_relocate_section): Look up dyn_h for undefweak.