@@ -1,3 +1,8 @@
+2003-08-04  Nick Clifton  <nickc@redhat.com>
+
+	* elflink.h (elf_link_add_object_symbols): Prepend "warning: "
+	to messages produced for .gnu.warning.SYMBOL sections.
+
 2003-08-04  Alan Modra  <amodra@bigpond.net.au>
 
 	* elfcode.h: Convert to C90, remove unneeded casts and prototypes.
